# otus-cpp-basics

./: README.md
task_3/: CMakeLists.txt  clear_table_records.cpp  clear_table_records.h  get_arguments.cpp  get_arguments.h  get_table_records.cpp  get_table_records.h  high_scores.txt  main.cpp  process_play.cpp  process_play.h  read_user_data.cpp  read_user_data.h  write_user_data.cpp  write_user_data.h
